# oop2

./: README.md
f(x)/: CMakeLists.txt  f(x).7z  main.cpp  solver_f_x.cpp  solver_f_x.hpp
f(x)/g_test/: test.cpp
football_ch/: CMakeLists.txt  before_shared_pyr.7z  championship.cpp  championship.hpp  football_ch.7z  main.cpp  members_of_championship.cpp  members_of_championship.hpp
my_shared_ptr/: CMakeLists.txt  main.cpp  my_shared_ptr.hpp  shared_ptr.7z  test.cpp
my_shared_ptr/g_test/: test.cpp  test.h
qusort/: CMakeLists.txt  main.cpp  qusort.7z  qusort.hpp
qusort/g_test/: test.cpp  test.h
tpl_sum_all/: CMakeLists.txt  sum_all.hpp  sum_policy.hpp  sum_traits.hpp  tpl_sum_all.7z
tpl_sum_all/g_test/: test.cpp
